Aggiunti i file mancanti